# DeepLearning-Pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: sample.txt
src/data_processing/: loader.py
temp_test_docs/: sample.txt
